// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Item renders Single Line Item 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Single line item
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Single line item
    </div>
  </div>
</div>
`;

exports[`List Item renders Single Line Item with Icon 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <span
      className="sc-fUmEdy bfMQNH"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
    <div
      className="sc-jMKfon jAmVm"
    >
      Single line item
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Single line item
    </div>
    <span
      className="sc-hKOiFN OTeoh"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <span
      className="sc-fUmEdy bfMQNH"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
    <div
      className="sc-jMKfon jAmVm"
    >
      Single line item
    </div>
    <span
      className="sc-hKOiFN OTeoh"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    className="sc-bgA-dc niaM"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Single line item
    </div>
    <span
      className="sc-izEbhJ jiBdZq"
    >
      Meta
    </span>
  </div>
</div>
`;

exports[`List Item renders Single Line Item with differen Sizes 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-bgA-dc eiHyHl"
    size="large"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Large
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Medium
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Two lines item
    </div>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Two lines item
    </div>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items with Checkbox 1`] = `
<div
  className="sc-bgA-dc gMEXNH"
  size="medium"
>
  <div
    className="sc-jMKfon jAmVm"
  >
    Two lines item
  </div>
  <span
    className="sc-hKOiFN OTeoh"
  >
    <label
      className="sc-DJmSI jVvJMs"
    >
      <input
        className="sc-ewgOdx dOvzjj"
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="sc-bQRcPC gExgtO"
      >
        <span
          className="sc-fJoEar dIVGzC"
        >
          <div
            checked={false}
            className="sc-bhpuBD eeoPXQ"
          />
        </span>
      </div>
    </label>
  </span>
  <div
    className="sc-bHfcXc iJeSNJ"
  >
    <div
      className="sc-fzCEhR cuVLrP"
    >
      Lorem Ipsum is simply dummy text of the printing and typesetting industry
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items with Icon 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <span
      className="sc-fUmEdy bfMQNH"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
    <div
      className="sc-jMKfon jAmVm"
    >
      Two lines item
    </div>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Two lines item
    </div>
    <span
      className="sc-hKOiFN OTeoh"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <span
      className="sc-fUmEdy bfMQNH"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
    <div
      className="sc-jMKfon jAmVm"
    >
      Two lines item
    </div>
    <span
      className="sc-hKOiFN OTeoh"
    >
      <svg
        className="sc-dvwKko"
        fill="none"
        fontSize="1.5rem"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
          stroke="currentColor"
        />
      </svg>
    </span>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
  <div
    className="sc-bgA-dc niaM"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Two lines item
    </div>
    <span
      className="sc-izEbhJ jiBdZq"
    >
      Meta
    </span>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items with different Sizes 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-bgA-dc eiHyHl"
    size="large"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Large
    </div>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
  <div
    className="sc-bgA-dc gMEXNH"
    size="medium"
  >
    <div
      className="sc-jMKfon jAmVm"
    >
      Medium
    </div>
    <div
      className="sc-bHfcXc iJeSNJ"
    >
      <div
        className="sc-fzCEhR cuVLrP"
      >
        Lorem Ipsum is simply dummy text of the printing and typesetting industry
      </div>
    </div>
  </div>
</div>
`;
